Add termin and conditions habeas data and other

--- a/Front/src/app/dashboard/about/about.component.html
+++ b/Front/src/app/dashboard/about/about.component.html
@@ -1,17 +1,30 @@
 <div class="panel-header panel-header-sm">
+  <div class="header text-center">
+    <h2 class="title">ACERCA DE</h2>
+  </div>
 </div>
+
 <div class="main-content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8">
       <div class="card ">
         <div class="card-header ">
-        Acerca De
+
+        <h1>NOSOTROS</h1>
+        <h2>Prestamos Lendiup S.A.S</h2>
+        <h3>NIT. 00000-0</h3>
+        <h3>+ 57 317 4237229</h3>
+        <h3>+57 1 5555555</h3>
+        <a class="m-2" href="https://api.whatsapp.com/send?phone=3174237229"><strong>WhatsApp  </strong>  <i  class="fab fa-whatsapp fa-2x"></i></a>
 
         </div>
         <div class="card-body ">
           <div id="map" class="map"></div>
         </div>
       </div>
+    </div>
+    <div class="col-md-4">
+      <app-datosconstruccion></app-datosconstruccion>
     </div>
   </div>
 </div>
