--- a/Front/src/app/landing/pages/page4/page4.component.html
+++ b/Front/src/app/landing/pages/page4/page4.component.html
@@ -19,7 +19,7 @@
           <hr class="hr-light">
 
           <p>
-            <strong>Un prestamo para lograr el sueño de tu vida.</strong>
+            <strong>Un prestamo para desarrollar tu proyecto.</strong>
           </p>
 
           <p class="mb-4 d-none d-md-block">
@@ -30,11 +30,11 @@
           <a type="button" (click)="requisitos()" class="btn btn-indigo btn-lg">      Requisitos
 
           </a>
+
           <a  type="button" (click)="register()" class="btn btn-indigo btn-lg">Solicita Tu Prestamo
             <!-- <i class="fas fa-wallet"></i> -->
           </a>
 
-          <hr>
 
           <p class="lead mb0">Solicite desde<strong>$100.000.000 hasta $700.000.000</strong></p>
           <span>(Te ayudamos con todos los insumos para tu construccion )</span>
