--- a/Front/src/app/shared/requisito-construccion/requisito-construccion.component.html
+++ b/Front/src/app/shared/requisito-construccion/requisito-construccion.component.html
@@ -8,24 +8,30 @@
               <form name="">
                 <!-- Heading -->
                 <h3 class="text-light text-center">
-                  <strong>Requisitos Prestamo Para Construccion:</strong>
+                  <strong>Requisitos Para Empresas De Construccion:</strong>
                 </h3>
                 <hr>
 
                 <div>
-                  <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Ser mayor de 18 años</p>
+                  <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Certificado de Camara Y Comercio Y Rut De La Empresa</p>
                 </div>
+                <!-- <div>
+                  <p class="text-white"><i class="fas fa-asterisk text-white"></i>  RUT</p>
+                </div> -->
                 <div >
-                <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener correo electrónico</p>
+                <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Cedula Del Representante Legal</p>
                 </div>
                 <div>
-                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Tener una cuenta bancaria a tu nombre</p>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Extractos Bancarios</p>
                 </div>
                 <div>
-                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Ser titular del inmbueble</p>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Estudio Financieros De La Obra</p>
                 </div>
                 <div>
-                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  El inmueble debe estar libre de embargos</p>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Programacion De Obra Y Permisos Curaduria</p>
+                </div>
+                <div>
+                 <p class="text-white"><i class="fas fa-asterisk text-white"></i>  Licencia De Construccion </p>
                 </div>
 
                 <div class="text-center">
