--- a/Front/src/app/shared/register/register.component.html
+++ b/Front/src/app/shared/register/register.component.html
@@ -21,10 +21,21 @@
         <input type="password" formControlName="password" placeholder="Ingrese su contraseña">
         <hr>
       <p> </p>
-      <!-- <fieldset class="form-check">
-        <input type="checkbox" class="form-check-input" id="checkbox1">
-        <label for="checkbox1" class="form-check-label dark-grey-text">Acepto Terminos Y Condiciones</label>
-      </fieldset> -->
+      <fieldset class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="checkbox1" formControlName="terminos">
+
+        <a href="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" for="checkbox1" class="form-check-label text-white">Acepto Terminos Y Condiciones</a>
+      </fieldset>
+      <fieldset class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="checkbox2" formControlName="politicas">
+
+        <a href="../../../assets/pdf/Politica-de-privacidad.pdf" for="checkbox2" class="form-check-label text-white">Acepta Politicas De Privacidad</a>
+      </fieldset>
+      <fieldset class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="checkbox3" formControlName="habeas">
+
+        <a href="../../../assets/pdf/Habeas-Data.pdf" for="checkbox3" class="form-check-label text-white">Acepta Habeas Data</a>
+      </fieldset>
      <div>
       <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button>
         <button type="submit"  [disabled]="miFormulario.invalid"><i class="fa fa-save"></i> Continuar</button>
