fix error form hipoteca usos

--- a/Front/src/app/dashboard/cartera/cartera.component.html
+++ b/Front/src/app/dashboard/cartera/cartera.component.html
@@ -95,12 +95,12 @@
 
 
                     <div class="row">
-                      <div class="col-md-2">
+                      <!-- <div class="col-md-2">
                         <button class="btSelectInProgress btn-block" mat-button (click)="cambiarEstado(solicitud, 'Completo')">En Estudio</button>
                       </div>
                       <div class="col-md-2">
                         <button class="btSelectDone btn-block" mat-button (click)="cambiarEstado(solicitud, 'Aprobada')">Aprobada</button>
-                      </div>
+                      </div> -->
                       <!-- <div class="col-md-2">
                         <button class="btSelectErr btn-block" mat-button (click)="cambiarEstado(solicitud, 'Mora')">Mora</button>
                       </div> -->
