--- a/Front/src/app/dashboard/datosinmueble/datosinmueble.component.html
+++ b/Front/src/app/dashboard/datosinmueble/datosinmueble.component.html
@@ -59,10 +59,10 @@
               <mat-form-field appearance="fill" class="form-group col-md-6">
                 <mat-select formControlName="uso">
                   <mat-option selected disabled value="">Escoge...</mat-option>
-                  <mat-option value="Residencial">Casa</mat-option>
-                  <mat-option value="Comercial">Apartamento</mat-option>
-                  <mat-option value="Mixto">Oficina</mat-option>
-                  <mat-option value="Agropecuario">Bodega</mat-option>
+                  <mat-option value="Residencial">Residencial</mat-option>
+                  <mat-option value="Comercial">Comercial</mat-option>
+                  <mat-option value="Mixto">Mixto</mat-option>
+                  <mat-option value="Agropecuario">Agropecuario</mat-option>
                 </mat-select>
                 <mat-label><mat-icon>home</mat-icon> <b> Uso Del Inmueble</b></mat-label>
               </mat-form-field>
