--- a/Front/src/app/dashboard/datosreferencias/datosreferencias.component.html
+++ b/Front/src/app/dashboard/datosreferencias/datosreferencias.component.html
@@ -17,17 +17,17 @@
 
             <hr>
             <div>
-              <h3 class="title"> Referencias Familiares</h3>
+              <h3 class="title"> Referencias</h3>
             </div>
             <hr>
-            <h6> Primera Referencia</h6>
+            <h3> Referencia Familiar</h3>
 
             <!-- Primera Fila -->
             <div class="row">
 
               <!-- Nombre1-->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Nombre</mat-label>
+                <mat-label>Nombre Y Apellido</mat-label>
                 <input matInput formControlName=nombre1 type="text"
                   class="form-control">
                 <mat-error *ngIf="campoEsValido('nombre1')">
@@ -74,14 +74,14 @@
 
 
             <hr>
-            <h6> Segunda Referencia</h6>
+            <h3> Referencia Personal</h3>
             <hr>
             <!-- Primera Fila -->
             <div class="row">
 
               <!-- Nombre2-->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Nombre</mat-label>
+                <mat-label>Nombre Y Apellido</mat-label>
                 <input matInput formControlName=nombre2 type="text"
                   class="form-control">
                 <mat-error *ngIf="campoEsValido('nombre2')">
@@ -125,26 +125,26 @@
 
             </div>
 
-            <hr>
+            <!-- <hr>
             <h6> Tercera Referencia</h6>
-            <hr>
+            <hr> -->
 
 
             <!-- Primera Fila -->
-            <div class="row">
+            <!-- <div class="row"> -->
 
               <!-- Nombre3-->
-              <mat-form-field class="form-group col-md-6 pl-1">
+              <!-- <mat-form-field class="form-group col-md-6 pl-1">
                 <mat-label>Nombre</mat-label>
                 <input matInput formControlName=nombre3 type="text"
                   class="form-control">
                 <mat-error *ngIf="campoEsValido('nombre3')">
                   {{getError('nombre3')}}
                 </mat-error>
-              </mat-form-field>
+              </mat-form-field> -->
 
               <!-- Parentezco3 -->
-              <mat-form-field class="form-group col-md-6 pl-1">
+              <!-- <mat-form-field class="form-group col-md-6 pl-1">
                 <mat-label>Parentezco</mat-label>
                 <input matInput formControlName="parentezco3" type="text"
                   class="form-control">
@@ -153,22 +153,22 @@
                 </mat-error>
               </mat-form-field>
 
-            </div>
+            </div> -->
 
             <!-- Segunda Fila -->
-            <div class="row">
+            <!-- <div class="row"> -->
                  <!-- Direccion3-->
-                 <mat-form-field class="form-group col-md-6 pl-1">
+                 <!-- <mat-form-field class="form-group col-md-6 pl-1">
                   <mat-label>Direccion</mat-label>
                   <input matInput formControlName=direccion3 type="text"
                     class="form-control">
                   <mat-error *ngIf="campoEsValido('direccion3')">
                     {{getError('direccion3')}}
                   </mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
 
                 <!-- Celular3 -->
-                <mat-form-field class="form-group col-md-6 pl-1">
+                <!-- <mat-form-field class="form-group col-md-6 pl-1">
                   <mat-label>Celular o Telefono</mat-label>
                   <input matInput formControlName="celular3" type="number"
                     class="form-control">
@@ -177,7 +177,7 @@
                   </mat-error>
                 </mat-form-field>
 
-            </div>
+            </div> -->
 
 
             <div class="form-group d-flex h-100">
