new product request

--- a/Front/src/app/shared/login/login.component.html
+++ b/Front/src/app/shared/login/login.component.html
@@ -22,8 +22,8 @@
         <label for="checkbox1" class="form-check-label dark-grey-text">Acepto Terminos Y Condiciones</label>
       </fieldset> -->
      <div>
-      <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button>
-        <button type="submit"  [disabled]="miFormulario.invalid">Continuar</button>
+      <!-- <button type="button"  (click)="calc(0)" class="mx-3">Atras  <i class="far fa-hand-point-left"></i></button> -->
+      <button type="submit"  [disabled]="miFormulario.invalid">Continuar</button>
 
       </div>
 
