--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -21,6 +21,10 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto" >
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/landing/quickloan" data-toggle="collapse" data-target="#navbarSupportedContent">UltraRapido
+          </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/landing/personal" data-toggle="collapse" data-target="#navbarSupportedContent">Personales
           </a>
         </li>
