--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -184,6 +184,8 @@
               </mat-form-field>
 
             </div>
+            <a (click)="segundaparte()">Siguiente</a>
+
 
             <!-- Boton De Enviar Formulario -->
             <div class="form-group d-flex h-100">
