--- a/Front/src/app/shared/register/register.component.html
+++ b/Front/src/app/shared/register/register.component.html
@@ -79,3 +79,13 @@
 
 </div>
 <!--/.Card-->
+
+<!--
+
+<span>Valid</span>
+<pre>{{ miFormulario.valid }}</pre>
+<br>
+
+<span>Value</span>
+<pre>{{ miFormulario.value | json }}</pre>
+<br> -->
