new forms quick

--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -184,7 +184,7 @@
               </mat-form-field>
 
             </div>
-            <a (click)="segundaparte()">Siguiente</a>
+            <!-- <a (click)="segundaparte()">Siguiente</a> -->
 
 
             <!-- Boton De Enviar Formulario -->
